# paradigm-skills

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  run_evals.py
.github/scripts/: check_version_increment.py
.github/workflows/: block-analyst-tests.yml  evals.yml  options-recap-tests.yml  version-check.yml
docs/: adding-skills.md  mcp-tools.md
skills/block-analyst/: SKILL.md
skills/data-discovery/: SKILL.md
skills/execution-analyst/: SKILL.md
skills/market-analyst/: SKILL.md
skills/options-pricer/: SKILL.md
skills/options-recap/: README.md  (+1 more)
tools/strategy-viz/: README.md  pyproject.toml  strategy.schema.json
tools/strategy-viz/cli/: gen_synthetic_backtest.py  render_backtest.py  render_payoff.py  render_strategy_card.py  to_mermaid.py  to_webchat.py
tools/strategy-viz/demo/: diff.html  index.html  plotly_payoff.html
tools/strategy-viz/docs/: blocks-catalog.md
tools/strategy-viz/samples/: btc-expression-dsl.json  bull_put_spread_btc.json  covered_perp_call_sol.json  csp_btc_oversold.json  iron_condor_btc.json  long_call_btc.json  long_straddle_eth.json  short_strangle_eth.json
tools/strategy-viz/strategy_viz/: __init__.py  blocks.py  common.py  mermaid.py  pricing.py  specs.py
tools/strategy-viz/strategy_viz/js/: index.mjs  package.json
tools/strategy-viz/strategy_viz/renderers/: __init__.py  backtest.py  payoff.py  strategy_card.py
tools/strategy-viz/tests/: conftest.py  parity_harness.mjs  test_blocks.py  test_common.py  test_parity.py  test_pricing.py  test_schema.py  test_specs.py  test_to_mermaid.py  test_to_webchat.py
(+84 files in other folders)
